@@ -1,0 +1,68 @@
+;;; SipHash-2-4
+
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"" #h"310e0edd47db6f72")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00" #h"fd67dc93c539f874")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001" #h"5a4fa9d909806c0d")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102" #h"2d7efbd796666785")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203" #h"b7877127e09427cf")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304" #h"8da699cd64557618")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405" #h"cee3fe586e46c9cb")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506" #h"37d1018bf50002ab")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304050607" #h"6224939a79f5f593")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708" #h"b0e4a90bdf82009e")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506070809" #h"f3b9dd94c5bb5d7a")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a" #h"a7ad6b22462fb3f4")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b" #h"fbe50e86bc8f1e75")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c" #h"903d84c02756ea14")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d" #h"eef27a8e90ca23f7")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e" #h"e545be4961ca29a1")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f" #h"db9bc2577fcc2a3f")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f10" #h"9447be2cf5e99a69")
+
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162636465666768696a6b6c6d6e6f707172737475767778797a7b7c7d7e7f808182838485868788898a8b8c8d8e8f909192939495969798999a9b9c9d9e9fa0a1a2a3a4a5a6a7a8a9aaabacadaeafb0b1b2b3b4b5b6b7b8b9babbbcbdbebfc0c1c2c3c4c5c6c7c8c9cacbcccdcecfd0d1d2d3d4d5d6d7d8d9dadbdcdddedfe0e1e2e3e4e5e6e7e8e9eaebecedeeeff0f1f2f3f4f5f6f7f8f9fafbfcfdfeff000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d" #h"B97C83DB4EDF24E8")
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162636465666768696a6b6c6d6e6f707172737475767778797a7b7c7d7e7f808182838485868788898a8b8c8d8e8f909192939495969798999a9b9c9d9e9fa0a1a2a3a4a5a6a7a8a9aaabacadaeafb0b1b2b3b4b5b6b7b8b9babbbcbdbebfc0c1c2c3c4c5c6c7c8c9cacbcccdcecfd0d1d2d3d4d5d6d7d8d9dadbdcdddedfe0e1e2e3e4e5e6e7e8e9eaebecedeeeff0f1f2f3f4f5f6f7f8f9fafbfcfdfeff000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e" #h"42A406FC61660BFA")
+
+
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"" #h"a3817f04ba25a8e66df67214c7550293" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00" #h"da87c1d86b99af44347659119b22fc45" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001" #h"8177228da4a45dc7fca38bdef60affe4" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102" #h"9c70b60c5267a94e5f33b6b02985ed51" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203" #h"f88164c12d9c8faf7d0f6e7c7bcd5579" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304" #h"1368875980776f8854527a07690e9627" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405" #h"14eeca338b208613485ea0308fd7a15e" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506" #h"a1f1ebbed8dbc153c0b84aa61ff08239" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304050607" #h"3b62a9ba6258f5610f83e264f31497b4" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708" #h"264499060ad9baabc47f8b02bb6d71ed" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506070809" #h"00110dc378146956c95447d3f3d0fbba" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a" #h"0151c568386b6677a2b4dc6f81e5dc18" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b" #h"d626b266905ef35882634df68532c125" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c" #h"9869e247e9c08b10d029934fc4b952f7" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d" #h"31fcefac66d7de9c7ec7485fe4494902" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e" #h"5493e99933b0a8117e08ec0f97cfc3d9" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f" #h"6ee2a4ca67b054bbfd3315bf85230577" :digest-length 16)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f10" #h"473d06e8738db89854c066c47ae47740" :digest-length 16)
+
+
+;;; SipHash-4-8
+
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"" #h"41DA38992B0579C8" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00" #h"51B89552F91459C8" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001" #h"923716F0BEDDC333" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102" #h"6A46D47D6547C105" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203" #h"C238592B4AC1FA48" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304" #h"F6C2D7D9CF5247E1" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405" #h"6BB6BC34C835558E" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506" #h"47D73F715ABEFD4E" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"0001020304050607" #h"20B58B9C072FDB50" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708" #h"36319AF35EE11253" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"00010203040506070809" #h"48A9D0DB0A8D848F" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a" #h"CC69396036040A81" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b" #h"4B6D68537AA79761" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c" #h"293796E9F2C95069" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d" #h"88431BEAA7629A68" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e" #h"E0A6A97DD589D383" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f" #h"559CF55380B2AC70" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f10" #h"D5B7C5117AE3794E" :compression-rounds 4 :finalization-rounds 8)
+
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162636465666768696a6b6c6d6e6f707172737475767778797a7b7c7d7e7f808182838485868788898a8b8c8d8e8f909192939495969798999a9b9c9d9e9fa0a1a2a3a4a5a6a7a8a9aaabacadaeafb0b1b2b3b4b5b6b7b8b9babbbcbdbebfc0c1c2c3c4c5c6c7c8c9cacbcccdcecfd0d1d2d3d4d5d6d7d8d9dadbdcdddedfe0e1e2e3e4e5e6e7e8e9eaebecedeeeff0f1f2f3f4f5f6f7f8f9fafbfcfdfeff000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d" #h"2fbd2b9a1c0ef576" :compression-rounds 4 :finalization-rounds 8)
+(:mac-test #h"000102030405060708090a0b0c0d0e0f" #h"000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162636465666768696a6b6c6d6e6f707172737475767778797a7b7c7d7e7f808182838485868788898a8b8c8d8e8f909192939495969798999a9b9c9d9e9fa0a1a2a3a4a5a6a7a8a9aaabacadaeafb0b1b2b3b4b5b6b7b8b9babbbcbdbebfc0c1c2c3c4c5c6c7c8c9cacbcccdcecfd0d1d2d3d4d5d6d7d8d9dadbdcdddedfe0e1e2e3e4e5e6e7e8e9eaebecedeeeff0f1f2f3f4f5f6f7f8f9fafbfcfdfeff000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e" #h"9951ad46d24d81b8" :compression-rounds 4 :finalization-rounds 8)
